Update running example and threeshold
